--- a/bower.json
+++ b/bower.json
@@ -10,13 +10,13 @@
     "tests"
   ],
   "dependencies": {
-    "backbone": "~1.2.1",
-    "backbone.validation": "backbone-validation#~0.11.5",
-    "edx-pattern-library": "^0.10.4",
-    "jquery": "~2.1.4",
-    "jquery-cookie": "~1.4.1",
-    "requirejs": "~2.1.15",
-    "text": "~2.0.14",
-    "underscore": "~1.8.2"
+    "backbone": "^1.3.3",
+    "backbone-validation": "^0.11.5",
+    "edx-pattern-library": "^0.18.0",
+    "jquery": "^3.1.1",
+    "jquery-cookie": "^1.4.1",
+    "requirejs": "^2.3.2",
+    "text": "^2.0.14",
+    "underscore": "^1.8.2"
   }
 }
