--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-jscs": "3.0.0",
-    "gulp-jshint": "1.12.0",
+    "gulp-jscs": "^4.0.0",
+    "gulp-jshint": "^2.0.4",
     "jasmine-core": "^2.3.4",
-    "jshint": "2.8.0",
-    "karma": "^0.13.2",
-    "karma-coverage": "^0.5.2",
-    "karma-phantomjs-launcher": "^0.1",
-    "karma-jasmine": "^0.3.6",
-    "karma-requirejs": "^0.2.2",
+    "jshint": "^2.9.4",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-jasmine": "^1.0.2",
+    "karma-requirejs": "^1.1.0",
     "karma-sinon": "^1.0.4",
-    "karma-spec-reporter": "0.0.20",
+    "karma-spec-reporter": "^0.0.26",
     "phantomjs": "^1.9.17",
     "sinon": "^1.15.4"
   }
