chore(ci): [OeX_Cred-128] add project development branch to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, dcc.master ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, dcc.master ]
 
 jobs:
   quality_and_translations_tests:
