--- a/credentials/settings/private.py.example
+++ b/credentials/settings/private.py.example
@@ -15,3 +15,18 @@ PROGRAMS_CACHE_TTL = 60
 # USER API CONFIGURATION
 # Specified in seconds. Enable caching by setting this to a value greater than 0.
 USER_CACHE_TTL = 60
+
+# Verifiable Credentials
+USE_LEARNER_RECORD_MFE = True
+ENABLE_VERIFIABLE_CREDENTIALS = True
+
+# see verifiable_credentials.settings#DEFAULTS for options
+VERIFIABLE_CREDENTIALS = {
+    "DEFAULT_ISSUER_DID": "generate-me-with-didkit-lib",
+    "DEFAULT_ISSUER_KEY": "generate-me-with-didkit-lib",
+    "FORCE_DATA_MODEL": "importable.path.to.unconditionally.used.data.model",
+    "DEFAULT_STORAGES": [
+        "importable.path.to.storage.class",
+        "openedx_wallet.storage.OpenEdxWallet",
+    ],
+}
