feat: [OeX_Cred-565] issue credential oauth

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -21,6 +21,7 @@ django-extensions
 django-filter
 django-ratelimit
 django-rest-swagger
+django-oauth-toolkit
 django-simple-history
 django-sortedm2m
 django-statici18n
