refactor: issuer data model

--- a/credentials/settings/private.py.example
+++ b/credentials/settings/private.py.example
@@ -24,9 +24,10 @@ ENABLE_VERIFIABLE_CREDENTIALS = True
 VERIFIABLE_CREDENTIALS = {
     "DEFAULT_ISSUER_DID": "generate-me-with-didkit-lib",
     "DEFAULT_ISSUER_KEY": "generate-me-with-didkit-lib",
-    "FORCE_DATA_MODEL": "importable.path.to.unconditionally.used.data.model",
+    "DEFAULT_ISSUER_NAME": "Optional Issuer Name",
+    "FORCE_DATA_MODEL": "importable.path.to.unconditionally.used.data.model.Class",
     "DEFAULT_STORAGES": [
-        "importable.path.to.storage.class",
+        "importable.path.to.storage.Class",
         "openedx_wallet.storage.OpenEdxWallet",
     ],
 }
