feat: return issuance configuration model

--- a/credentials/settings/private.py.example
+++ b/credentials/settings/private.py.example
@@ -22,9 +22,11 @@ ENABLE_VERIFIABLE_CREDENTIALS = True
 
 # see verifiable_credentials.settings#DEFAULTS for options
 VERIFIABLE_CREDENTIALS = {
-    "DEFAULT_ISSUER_DID": "generate-me-with-didkit-lib",
-    "DEFAULT_ISSUER_KEY": "generate-me-with-didkit-lib",
-    "DEFAULT_ISSUER_NAME": "Optional Issuer Name",
+    "DEFAULT_ISSUER: {
+        "DID": "generate-me-with-didkit-lib",
+        "KEY": "generate-me-with-didkit-lib",
+        "NAME": "Optional Issuer Name",
+    }
     "FORCE_DATA_MODEL": "importable.path.to.unconditionally.used.data.model.Class",
     "DEFAULT_STORAGES": [
         "importable.path.to.storage.Class",
