feat: backport plugins support
* feat: [FC-0006] add plugins support

* fix: exclude non-relevant pieces of the codebase from Codecov measurement

---------

Co-authored-by: Kyrylo Kholodenko <kyrylo.kholodenko@raccoongang.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,4 @@
-comment: off
+comment: false
 coverage:
   status:
     patch:
@@ -7,3 +7,6 @@ coverage:
     project:
       default:
         target: 95
+ignore:
+  - credentials/settings/production.py
+  - credentials/settings/devstack.py
