--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master, dcc.master ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, dcc.master ]
+    branches: [ master ]
 
 jobs:
   quality_and_translations_tests:
@@ -89,10 +89,10 @@ jobs:
           make static
           make tests
       - name: Run code coverage
-        run: |
-          make coverage
-          pip install codecov
-          codecov
+        uses: codecov/codecov-action@v1
+        with:
+          flags: unittests
+          fail_ci_if_error: true
 
   docs:
     runs-on: ubuntu-latest
