fix: review suggestions

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -192,4 +192,6 @@ pseudoxml:
 	@echo "Build finished. The pseudo-XML files are in $(BUILDDIR)/pseudoxml."
 
 livehtml:
+	@echo
+	@echo "Run live devserver.
 	sphinx-autobuild "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
