--- a/requirements/base.in
+++ b/requirements/base.in
@@ -51,6 +51,9 @@ segment-analytics-python
 social-auth-app-django
 xss-utils
 
+# Badges app baked-in backend plugins:
+-e credentials/apps/badges/distribution/credly
+
 
 # TODO Install in configuration
 git+https://github.com/openedx/credentials-themes.git@0.3.22#egg=edx_credentials_themes==0.3.22
