refactor: restructure badges backend

--- a/credentials/apps/badges/distribution/credly/pyproject.toml
+++ b/credentials/apps/badges/distribution/credly/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 dynamic = ["version", "dependencies", "optional-dependencies"]
 
 [project.entry-points."credentials.djangoapp"]
-credly_badges = "credly_badges.apps:CredlyBadgesConfig"
+badges = "credly_badges.apps:CredlyBadgesConfig"
 
 [project.urls]
 Repository = "https://github.com/openedx/credentials.git"
@@ -37,7 +37,7 @@ packages = ["credly_badges"]
 
 [tool.setuptools.dynamic]
 version = { attr = "credly_badges.__version__" }
-dependencies = { file = "requirements/base.in" }
+dependencies = { file = "requirements/base.txt" }
 
 [tool.ruff]
 # https://docs.astral.sh/ruff/configuration/
