--- a/requirements/base.in
+++ b/requirements/base.in
@@ -51,9 +51,8 @@ segment-analytics-python
 social-auth-app-django
 xss-utils
 
-# Badges app baked-in backend plugins:
+# Badges baked-in backends:
 -e credentials/apps/badges/distribution/credly
-
 
 # TODO Install in configuration
 git+https://github.com/openedx/credentials-themes.git@0.4.3#egg=edx_credentials_themes==0.4.3
