--- a/requirements/base.in
+++ b/requirements/base.in
@@ -53,7 +53,7 @@ social-auth-app-django
 xss-utils
 
 # Badges baked-in backends:
--e credentials/apps/badges/distribution/credly
+openedx-badges-credly @ git+https://github.com/raccoongang/credentials.git@aci.main#subdirectory=credentials/apps/badges/distribution/credly
 
 # TODO Install in configuration
 git+https://github.com/openedx/credentials-themes.git@0.4.3#egg=edx_credentials_themes==0.4.3
