--- a/.github/workflows/migrations-mysql8-check.yml
+++ b/.github/workflows/migrations-mysql8-check.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install system Packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y libxmlsec1-dev
+        sudo apt-get install -y libpython3.8-dev libxmlsec1-dev
     - name: Get pip cache dir
       id: pip-cache-dir
       run: |
